--- a/src/API/DT.Infra/DT.Infra.csproj
+++ b/src/API/DT.Infra/DT.Infra.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1"/>
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="7.0.0"/>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0"/>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DT.Domain\DT.Domain.csproj"/>
