--- a/src/API/DT.Infra/DT.Infra.csproj
+++ b/src/API/DT.Infra/DT.Infra.csproj
@@ -15,6 +15,8 @@
     <PackageReference Include="Microsoft.Extensions.Hosting.WindowsServices" Version="7.0.0"/>
     <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0"/>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="7.0.5"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="7.0.5"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DT.Domain\DT.Domain.csproj"/>
